# bedrock-agentcore-tutorial

./: pyproject.toml
dependencies/: Dockerfile  requirements.txt
src/: strands_agentcore.py
terraform/: main.tf  variables.tf
terraform-ecr/: ecr.tf
tests/shell_scripts/: build_docker_image.sh  local_docker_invocation.sh
